--- a/pages/blockchain_block.html
+++ b/pages/blockchain_block.html
@@ -57,7 +57,7 @@
 		</article>
 
 		<article class="tile is-child notification is-size-6">
-				<i class="fas fa-lock" aria-hidden="true"></i> <b>Effective Tx Median </b> <span id="block.effectiveTxsMedian"></span>
+				<i class="fas fa-chart-bar" aria-hidden="true"></i> <b>Effective Tx Median </b> <span id="block.effectiveTxsMedian"></span>
 		</article>	
 	</div>
     <div class="tile is-parent is-vertical is-3">
