--- a/pages/blockchain_transaction.html
+++ b/pages/blockchain_transaction.html
@@ -1,17 +1,20 @@
 <div class="tile is-ancestor">
-
     <div class="tile is-parent is-12">
         <article class="tile is-child notification is-warning" id="tx_unconfirmed" style="display: none;">
             <p class="title size-is-4 has-text-centered">Unconfirmed </p>
         </article>
     </div>
+</div>
 
+<div class="tile is-ancestor">
     <div class="tile is-parent is-12">
         <article class="tile is-child notification">
             <p class="title size-is-4">Transaction <span id="transaction.hash" style="word-break: break-all;"></span></p>
         </article>
     </div>
+</div>
 
+<div class="tile is-ancestor">
     <div class="tile is-parent is-12">
         <article class="tile is-child notification" id="div_transaction_paymentId">
             <div>
@@ -22,7 +25,6 @@
             </div>
         </article>
     </div>
-
 </div>
 
 <div class="tile is-ancestor">
@@ -61,12 +63,12 @@
                 <i class="fas fa-file" aria-hidden="true"></i> <b>Timestamp: </b> <span id="transaction.timestamp"></span>
         </article>	
     </div>
-</div>
+</div> 
  
 <div class="tile is-ancestor">
     <div class="tile is-parent is-6">
         <article class="tile is-child notification">
-            <p class="title size-is-4">Inputs (<span id="inputs_count"></span>)</p>
+            <p class="title size-is-5">Inputs (<span id="inputs_count"></span>)</p>
             <div class="table">
                 <table class="table table-hover table-fullwidth size-is-7">
                     <thead>
