--- a/pages/blockchain_block.html
+++ b/pages/blockchain_block.html
@@ -2,7 +2,7 @@
 
 	<div class="tile is-parent is-12">
 		<article class="tile is-child notification">
-			<p class="title size-is-4">Block <span id="block_hash size-is-7"><span id="block.hash"></span></span></p>
+			<p class="title size-is-5"><i class="fab fa-hashtag"></i> <span id="block_hash"><span id="block.hash"></span></span></p>
 		</article>
 	</div>
 </div>
