--- a/pages/blockchain_transaction.html
+++ b/pages/blockchain_transaction.html
@@ -9,7 +9,7 @@
 <div class="tile is-ancestor">
     <div class="tile is-parent is-12">
         <article class="tile is-child notification">
-            <p class="title size-is-4">Transaction <span id="transaction.hash" style="word-break: break-all;"></span></p>
+            <p class="title size-is-5"><i class="fab fa-hashtag"></i> <span id="transaction.hash" style="word-break: break-all;"></span></p>
         </article>
     </div>
 </div>
