--- a/pages/blockchain_transaction.html
+++ b/pages/blockchain_transaction.html
@@ -30,7 +30,7 @@
 <div class="tile is-ancestor">
     <div class="tile is-parent is-vertical is-6">
         <article class="tile is-child notification is-size-6">
-            <i class="fas fa-check" aria-hidden="true"></i> <b>Confirmation: </b> <div id="confirmations" style="display: none;">Confirmations: <span id="transaction.confirmations"></span> <span id="transaction.timestamp"></span> (<time class="transaction-timeago"></time>)
+            <i class="fas fa-check" aria-hidden="true"></i> <b>Confirmation: </b> <div id="confirmations" style="display: none;">Confirmations: <span id="transaction.timestamp"></span> (<time class="transaction-timeago"></time>)
         </article>   
 
         <article class="tile is-child notification is-size-6">
@@ -56,11 +56,11 @@
         </article>
 
         <article class="tile is-child notification is-size-6">
-            <i class="fas fa-code-dot-circle" aria-hidden="true"></i> <b>Height: </b> <span id="transaction.height"></span>
+            <i class="fas fa-code-dot-circle" aria-hidden="true"></i> <b>Height: </b> <span id="block.height"></span>
         </article>
 
         <article class="tile is-child notification is-size-6">
-                <i class="fas fa-file" aria-hidden="true"></i> <b>Timestamp: </b> <span id="transaction.timestamp"></span>
+                <i class="fas fa-file" aria-hidden="true"></i> <b>Timestamp: </b> <span id="block.timestamp"></span>
         </article>	
     </div>
 </div> 
