--- a/pages/blockchain_transaction.html
+++ b/pages/blockchain_transaction.html
@@ -25,12 +25,12 @@
             </div>
         </article>
     </div>
-</div>
+
 
 <div class="tile is-ancestor">
     <div class="tile is-parent is-vertical is-6">
         <article class="tile is-child notification is-size-6">
-            <i class="fas fa-check" aria-hidden="true"></i> <b>Confirmation: </b> <div id="confirmations" style="display: none;">Confirmations: <span id="transaction.timestamp"></span> (<time class="transaction-timeago"></time>)</div>
+            <i class="fas fa-check" aria-hidden="true"></i> <b>Confirmation: </b> <span id="confirmations" style="display: none;"><span id="transaction.confirmations"></span> (<time class="transaction-timeago"></time>)</span>
         </article>   
 
         <article class="tile is-child notification is-size-6">
