font size tx template

--- a/pages/blockchain_transaction.html
+++ b/pages/blockchain_transaction.html
@@ -1,7 +1,7 @@
-<div class="tile is-ancestor">
+<div class="tile is-ancestor" id="tx_unconfirmed" style="display: none;">
     <div class="tile is-parent is-12">
-        <article class="tile is-child notification is-warning" id="tx_unconfirmed" style="display: none;">
-            <p class="title size-is-4 has-text-centered">Unconfirmed </p>
+        <article class="tile is-child notification is-warning" >
+            <p class="title size-is-5 has-text-centered">Unconfirmed </p>
         </article>
     </div>
 </div>
@@ -9,23 +9,23 @@
 <div class="tile is-ancestor">
     <div class="tile is-parent is-12">
         <article class="tile is-child notification">
-            <p class="title size-is-5"><i class="fab fa-hashtag"></i> <span id="transaction.hash" style="word-break: break-all;"></span></p>
+            <p class="title size-is-6"><i class="fab fa-hashtag"></i> <span id="transaction.hash" style="word-break: break-all;"></span></p>
         </article>
     </div>
 </div>
 
-<div class="tile is-ancestor">
+<div class="tile is-ancestor" id="div_transaction_paymentId">
     <div class="tile is-parent is-12">
-        <article class="tile is-child notification" id="div_transaction_paymentId">
+        <article class="tile is-child notification">
             <div>
-                <p class="title size-is-4">Payment ID <span id="transaction.paymentId"></span></p>
+                <p class="title size-is-6">Payment ID <span id="transaction.paymentId"></span></p>
             </div>
             <div>
-                <p class="title size-is-4">Payment ID decoding: <em id="transaction.paymentIdDecifer"></em></p>
+                <p class="title size-is-6">Payment ID decoding: <em id="transaction.paymentIdDecifer"></em></p>
             </div>
         </article>
     </div>
-
+</div>
 
 <div class="tile is-ancestor">
     <div class="tile is-parent is-vertical is-6">
