--- a/pages/blockchain_transaction.html
+++ b/pages/blockchain_transaction.html
@@ -9,7 +9,7 @@
 <div class="tile is-ancestor">
     <div class="tile is-parent is-12">
         <article class="tile is-child notification">
-            <p class="title size-is-6"><i class="fab fa-hashtag"></i> <span id="transaction.hash" style="word-break: break-all;"></span></p>
+            <p class="title size-is-6"><i class="fa fa-hashtag"></i> <span id="transaction.hash" style="word-break: break-all;"></span></p>
         </article>
     </div>
 </div>
@@ -17,12 +17,7 @@
 <div class="tile is-ancestor" id="div_transaction_paymentId">
     <div class="tile is-parent is-12">
         <article class="tile is-child notification">
-            <div>
-                <p class="title size-is-6">Payment ID <span id="transaction.paymentId"></span></p>
-            </div>
-            <div>
-                <p class="title size-is-6">Payment ID decoding: <em id="transaction.paymentIdDecifer"></em></p>
-            </div>
+           <p><i class="fa fa-hashtag"></i> Payment ID <span id="transaction.paymentId"></span></p>
         </article>
     </div>
 </div>
@@ -30,8 +25,8 @@
 <div class="tile is-ancestor">
     <div class="tile is-parent is-vertical is-6">
         <article class="tile is-child notification is-size-6">
-            <i class="fas fa-check" aria-hidden="true"></i> <b>Confirmation: </b> <span id="confirmations" style="display: none;"><span id="transaction.confirmations"></span> (<time class="transaction-timeago"></time>)</span>
-        </article>   
+               <i class="fas fa-check" aria-hidden="true"></i> <b>Confirmation: </b> <div id="confirmations" style="display: none;">Confirmations: <span id="transaction.confirmations"></span> <span id="transaction.timestamp"></span> (<time class="transaction-timeago"></time>)
+             </article>   
 
         <article class="tile is-child notification is-size-6">
             <i class="fas fa-money-bill-alt" aria-hidden="true"></i> <b>Fee: </b> <span id="transaction.fee"></span>
