syntax tx template

--- a/pages/blockchain_transaction.html
+++ b/pages/blockchain_transaction.html
@@ -25,15 +25,15 @@
 <div class="tile is-ancestor">
     <div class="tile is-parent is-vertical is-6">
         <article class="tile is-child notification is-size-6">
-               <i class="fas fa-check" aria-hidden="true"></i> <b>Confirmation: </b> <div id="confirmations" style="display: none;">Confirmations: <span id="transaction.confirmations"></span> <span id="transaction.timestamp"></span> (<time class="transaction-timeago"></time>)
-             </article>   
+            <i class="fas fa-check" aria-hidden="true"></i> <b>Confirmation: </b> <div id="confirmations" style="display: none;"> <span id="transaction.confirmations"></span> (<time class="transaction-timeago"></time>)</div>
+        </article>   
 
         <article class="tile is-child notification is-size-6">
             <i class="fas fa-money-bill-alt" aria-hidden="true"></i> <b>Fee: </b> <span id="transaction.fee"></span>
         </article>
 
         <article class="tile is-child notification is-size-6">
-            <i class="fas fa-code-dot-circle" aria-hidden="true"></i> <b>Outputs: </b> <span id="transaction.amount_out"></span>
+            <i class="fas fa-database" aria-hidden="true"></i> <b>Outputs: </b> <span id="transaction.amount_out"></span>
         </article>
 
         <article class="tile is-child notification is-size-6">
@@ -43,19 +43,19 @@
 
     <div class="tile is-parent is-vertical is-6">
         <article class="tile is-child notification is-size-6">
-                <i class="fas fa-money-bill-alt" aria-hidden="true"></i> <b>Mixin: </b> <span id="transaction.mixin"></span>
+                <i class="fas fa-link" aria-hidden="true"></i> <b>Mixin: </b> <span id="transaction.mixin"></span>
             </article>   
 
         <article class="tile is-child notification is-size-6">
-            <i class="fas fa-money-bill-alt" aria-hidden="true"></i> <b>Block Hash: </b> <span id="block.hash" style="word-break: break-all;"></span>
+            <i class="fas fa-cube" aria-hidden="true"></i> <b>Block Hash: </b> <span id="block.hash" style="word-break: break-all;"></span>
         </article>
 
         <article class="tile is-child notification is-size-6">
-            <i class="fas fa-code-dot-circle" aria-hidden="true"></i> <b>Height: </b> <span id="block.height"></span>
+            <i class="fas fa-bar" aria-hidden="true"></i> <b>Height: </b> <span id="block.height"></span>
         </article>
 
         <article class="tile is-child notification is-size-6">
-                <i class="fas fa-file" aria-hidden="true"></i> <b>Timestamp: </b> <span id="block.timestamp"></span>
+                <i class="fas fa-clock" aria-hidden="true"></i> <b>Timestamp: </b> <span id="block.timestamp"></span>
         </article>	
     </div>
 </div> 
