--- a/pages/blockchain_transaction.html
+++ b/pages/blockchain_transaction.html
@@ -1,3 +1,26 @@
+<div class="tile is-ancestor" id="tx_unconfirmed" style="display: none;">
+    <div class="tile is-parent is-12">
+        <article class="tile is-child notification is-warning" >
+            <p class="title size-is-5 has-text-centered">Unconfirmed </p>
+        </article>
+    </div>
+</div>
+
+<div class="tile is-ancestor">
+    <div class="tile is-parent is-12">
+        <article class="tile is-child notification">
+            <p class="size-is-6"><i class="fa fa-hashtag"></i> <span id="transaction.hash" style="word-break: break-all;"></span></p>
+        </article>
+    </div>
+</div>
+
+<div class="tile is-ancestor" id="div_transaction_paymentId">
+    <div class="tile is-parent is-12">
+        <article class="tile is-child notification">
+           <p><i class="fa fa-hashtag"></i> Payment ID <span id="transaction.paymentId"></span></p>
+        </article>
+    </div>
+</div>
 
 <div class="tile is-ancestor">
     <div class="tile is-parent is-vertical is-6">
@@ -28,7 +51,7 @@
         </article>
 
         <article class="tile is-child notification is-size-6">
-            <i class="fas fa-bar" aria-hidden="true"></i> <b>Height: </b> <span id="block.height"></span>
+            <i class="fas fa-bars" aria-hidden="true"></i> <b>Height: </b> <span id="block.height"></span>
         </article>
 
         <article class="tile is-child notification is-size-6">
