--- a/pages/blockchain_transaction.html
+++ b/pages/blockchain_transaction.html
@@ -3,7 +3,7 @@
         <article class="tile is-child notification is-warning" >
             <p class="title size-is-5 has-text-centered">Unconfirmed </p>
         </article>
-    </difev>
+    </div>
 </div>
 
 <div class="tile is-ancestor">
