--- a/pages/blockchain_transaction.html
+++ b/pages/blockchain_transaction.html
@@ -35,7 +35,7 @@
 <div class="tile is-ancestor">
     <div class="tile is-parent is-vertical is-6">
         <article class="tile is-child notification is-size-6">
-            <i class="fas fa-check" aria-hidden="true"></i> <b>Confirmation: </b> <span id="confirmations" style="display: none;"> <span id="transaction.confirmations"></span></span>
+            <i class="fas fa-check" aria-hidden="true"></i> <div id="confirmations" style="display: none;"> <i class="fa fa-question-circle"></i><b>Confirmations: </b> <span id="transaction.confirmations"></span>, First confirmation time: <span id="transaction.timestamp"></span> (<time class="transaction-timeago"></time>)</div>
         </article>
 
         <article class="tile is-child notification is-size-6">
