--- a/pages/blockchain_transaction.html
+++ b/pages/blockchain_transaction.html
@@ -35,7 +35,7 @@
 <div class="tile is-ancestor">
     <div class="tile is-parent is-vertical is-6">
         <article class="tile is-child notification is-size-6">
-            <i class="fas fa-check" aria-hidden="true"></i> <b>Confirmations: </b> <div id="confirmations" style="display: none;"> <span id="transaction.confirmations"></span></div>
+            <i class="fas fa-check" aria-hidden="true"></i> <b>Confirmations: </b> <span id="confirmations" style="display: none;"> <span id="transaction.confirmations"></span></span>
         </article>
 
         <article class="tile is-child notification is-size-6">
