--- a/index.html
+++ b/index.html
@@ -57,7 +57,17 @@
 							</span>
 						</div>
 						<div id="navbarMenu" class="navbar-menu">
+			
 							<div class="navbar-end">
+								<span class="navbar-item">
+									<a href="http://athx.org" class="button is-light">
+									<span class="icon">
+										<i class="fa fa-home"></i>
+									</span>
+									<span>Home</span>
+									</a>
+								</span>
+
 								<span class="navbar-item">
 									<a data-page="home.html" href="#" class="button is-light hot_link">
 									<span class="icon">
@@ -66,6 +76,7 @@
 									<span>Explorer</span>
 									</a>
 								</span>
+
 								<span class="navbar-item">
 									<a data-page="pools.html" href="#pools" class="button is-light hot_link">
 									<span class="icon">
