wallet link nav

--- a/index.html
+++ b/index.html
@@ -85,6 +85,17 @@
 									<span>Pools</span>
 									</a>
 								</span>
+
+								<span class="navbar-item">
+									<a href="http://wallet.athx.org" class="button is-light">
+									  <span class="icon">
+										<i class="fa fa-wallet"></i>
+									  </span>
+									  
+									  <span>Wallet</span>
+									</a>
+								</span>
+
 								<span class="navbar-item" style="display:none;">
 									<a data-page="api.html" href="#api" class="button is-light hot_link">
 									<span class="icon">
