reddit link in footer

--- a/index.html
+++ b/index.html
@@ -173,7 +173,6 @@
 					<div class="columns">
 						<div class="column has-text-left">
 								&copy; 2018 <a href="http://athx.org">Athena Foundation </a>
-
 						</div>
 						<div class="column has-text-right">
 							<a href="http://blocks.athx.host/#api" class="button is-light">
@@ -182,12 +181,22 @@
 								</span>
 								<span>API</span>
 							</a>
+
 							<a href="http://chat.athx.org" class="button is-dark" style="background: #6c81ca;">
 								<span class="icon">
 									<i class="fab fa-discord"></i>
 								</span>
 								<span>Discord</span>
 							</a>
+
+							<a href="https://reddit.com/r/athxnetwork" class="button is-dark" style="background: #ff4500;">
+								<span class="icon">
+								<i class="fab fa-reddit"></i>
+								</span>
+	
+								<span>Reddit</span>
+							</a>
+
 							<a href="https://github.com/fexra/athena-explorer" class="button is-dark">
 								<span class="icon">
 									<i class="fab fa-github"></i>
