updated api link

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 								&copy; 2018 <a href="http://athx.org">Athena Foundation </a>
 						</div>
 						<div class="column has-text-right">
-							<a href="http://blocks.athx.host/#api" class="button is-light">
+							<a href="http://explorer.athx.org/#api" class="button is-light">
 								<span class="icon">
 									<i class="fa fa-plug"></i>
 								</span>
