--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 				<header class="navbar" style="padding-top:10px;">
 					<div class="container">
 						<div class="navbar-brand">
-							<a href="/" class="navbar-item">
-								<p class="is-size-3 has-text-weight-semibold">Athena Explorer</p>
+							<a href="http://athx.org" class="navbar-item">
+								<p class="is-size-3 has-text-weight-semibold">Athena</p>
 							</a>
 							<span class="navbar-burger burger" data-target="navbarMenu">
 							<span></span>
