add mining in nav

--- a/index.html
+++ b/index.html
@@ -86,6 +86,16 @@
 									</a>
 								</span>
 
+								<span class="navbar-item">
+									<a href="http://athx.org/mining" class="button is-light">
+										<span class="icon">
+											<i class="fa fa-server"></i>
+										</span>
+										
+										<span>Mining</span>
+									</a>
+								</span>
+
 								<span class="navbar-item" style="display:none;">
 									<a data-page="api.html" href="#api" class="button is-light hot_link">
 									<span class="icon">
