navbar to right

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 		<section class="hero is-white is-fullheight">
 			<div class="hero-head">
 				<header class="navbar" style="padding-top:10px;">
+
 					<div class="container">
 						<div class="navbar-brand">
 							<a href="http://athx.org" class="navbar-item">
@@ -57,7 +58,8 @@
 							</span>
 						</div>
 						<div id="navbarMenu" class="navbar-menu">
-			
+							<div class="navbar-end">
+								
 								<span class="navbar-item">
 									<a data-page="home.html" href="#" class="button is-light hot_link">
 									<span class="icon">
@@ -87,7 +89,7 @@
 								</span>
 
 								<span class="navbar-item">
-									<a href="http://athx.org/mining" class="button is-light">
+									<a href="http://mining.athx.org" class="button is-light">
 										<span class="icon">
 											<i class="fa fa-server"></i>
 										</span>
@@ -154,6 +156,7 @@
 										</p>
 									</div>
 								</span>	
+
 							</div>
 						</div>
 					</div>
